// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb component should render breadcrumb with aria-label 1`] = `
<nav
  aria-label="custom label"
  className="pf-c-breadcrumb"
>
  <ol
    className="pf-c-breadcrumb__list"
  />
</nav>
`;

exports[`Breadcrumb component should render breadcrumb with children 1`] = `
<nav
  aria-label="Breadcrumb"
  className="pf-c-breadcrumb"
>
  <ol
    className="pf-c-breadcrumb__list"
  >
    <Component
      to="#"
    >
      Item 1
    </Component>
     
    <Component
      to="#"
    >
      Item 1
    </Component>
  </ol>
</nav>
`;

exports[`Breadcrumb component should render breadcrumb with className 1`] = `
<nav
  aria-label="Breadcrumb"
  className="pf-c-breadcrumb className"
>
  <ol
    className="pf-c-breadcrumb__list"
  />
</nav>
`;

exports[`Breadcrumb component should render default breadcrumb 1`] = `
<nav
  aria-label="Breadcrumb"
  className="pf-c-breadcrumb"
>
  <ol
    className="pf-c-breadcrumb__list"
  />
</nav>
`;
